--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,18 @@ plugins {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
     implementation 'com.google.guava:guava:27.0.1-jre'
     implementation 'org.apache.httpcomponents:httpclient:4.5.9'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'org.xerial:sqlite-jdbc:3.28.0'
+
+    // Logging library
+    // logback-classic automatically add logback-core and slf4j into the project
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
     testImplementation 'junit:junit:4.12'
 }
